--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Delink-D",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongoose": "^4.11.0"
   }
